Updating Mobius projects
Update Date,
update info
update packs to latest versions
Refactor PlayerInstance to Player
Refactor Item to ItemTemplate
Refactor datatables to data
Refactor getIpAddress() to getIp()
Formatting on configuration class
Updated donate task
- replaced with https://github.com/nightw0lv/Item-Delivery-Manager
commended fake player checks
commended HWID for C6 and C4 for other projects MAC address is used
Replaced old SQL in utilities
toAllOnlinePlayers() removed boolean
reworked localIp()